# Notes

./: README.md  become_a_game_developer_in_5_minutes.md  can_software_enginer_draw_pictures.md  python_upload.md  reasoning_with_function_signature.md
AWS/: Introduction to Amazon Elastic Compute Cloud or Amazon EC2.md
CSharp/: CMakeLists.txt
CSharp/basic_syntax/: CMakeLists.txt  basic_syntax.cs
CSharp/hello_world/: CMakeLists.txt  hello_world.cs
CSharp/interop/MyCSharpClass/: MyCSharpClass.sln
CSharp/interop/MyCSharpClass/MyCSharpClass/: Class1.cs  MyCSharpClass.csproj
CSharp/interop/MyCSharpClass/MyCSharpClass/Properties/: AssemblyInfo.cs
CSharp/interop/cpp_tlp/: cpp_tlp.sln
CSharp/interop/cpp_tlp/Release/: cpp_tlp.exe.metagen
CSharp/interop/cpp_tlp/cpp_tlp/: MyCSharpClass.tlb  cpp_tlp.cpp  cpp_tlp.vcxproj  cpp_tlp.vcxproj.filters
CSharp/interop/cpp_tlp/cpp_tlp/Debug/: demo_tlp_project.tlh  demo_tlp_project.tli
CSharp/interop/cpp_tlp/cpp_tlp/Debug/cpp_tlp.tlog/: cpp_tlp.lastbuildstate
CSharp/main_example/: CMakeLists.txt  main_example.cs
CSharp/type_conversion/: CMakeLists.txt  type_conversion.cs
Cpp/: MicrosoftBuild_How_to_adopt_modern_cpp_17.md
Cpp/CppCon2019/lightning_talk/: Function extraction with lambda expression.md
Cpp/CppCon2020/lightning_talk_2020/: become_a_game_developer_in_5_minutes.md  build_everything_from_source.md  code_sample_that_Compile_even_more_easily.md  cpp_20_lambdas_familiar_template_syntax.md
Cpp/TMP/: Template metaprograming.md
CppCon2019/lightning_talk/: Function extraction with lambda expression.md
CppCon2020/lightning_talk_2020/: build_everything_from_source.md  can_software_enginer_draw_pictures.md  code_sample_that_Compile_even_more_easily.md  cpp_20_lambdas_familiar_template_syntax.md  reasoning_with_function_signature.md
TMP/: Template metaprograming.md
latex/: example_1.tex  example_2.tex  example_3.tex  example_4.tex
others/: vim_for_python_dev.md  vim_text_exitor.md
tutorialspoint/CSharp/: CMakeLists.txt  basic_syntax.cs  hello_world.cs  main.cpp  main_example.cs  readme.md
